--- a/pom.xml
+++ b/pom.xml
@@ -47,4 +47,14 @@
 	      <version>1.7</version>
 	    </dependency>
 	</dependencies>
+	<distributionManagement>
+	    <repository>
+	        <id>repo</id>
+	        <url>https://github.com/JosuaKrause/joschi-mvn-repo/raw/master/releases</url>
+	    </repository>
+	    <snapshotRepository>
+	        <id>snapshot-repo</id>
+	        <url>https://github.com/JosuaKrause/joschi-mvn-repo/raw/master/snapshots</url>
+	    </snapshotRepository>
+	</distributionManagement>
 </project>
