--- a/pom.xml
+++ b/pom.xml
@@ -47,14 +47,20 @@
 	      <version>1.7</version>
 	    </dependency>
 	</dependencies>
+	<repositories>
+    <repository>
+	        <id>joschi-snapshots</id>
+	        <url>https://raw.github.com/JosuaKrause/joschi-mvn-repo/master/snapshots</url>
+	    </repository>
+	</repositories>
 	<distributionManagement>
 	    <repository>
 	        <id>repo</id>
-	        <url>https://github.com/JosuaKrause/joschi-mvn-repo/raw/master/releases</url>
+	        <url>https://raw.github.com/JosuaKrause/joschi-mvn-repo/master/releases</url>
 	    </repository>
 	    <snapshotRepository>
 	        <id>snapshot-repo</id>
-	        <url>https://github.com/JosuaKrause/joschi-mvn-repo/raw/master/snapshots</url>
+	        <url>https://raw.github.com/JosuaKrause/joschi-mvn-repo/master/snapshots</url>
 	    </snapshotRepository>
 	</distributionManagement>
 </project>
