ability to create screenshots with P - also more interaction

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
 			<version>1.7</version>
 		</dependency>
 		<dependency>
+            <groupId>org.apache.xmlgraphics</groupId>
+            <artifactId>batik-svggen</artifactId>
+            <version>1.7</version>
+        </dependency>
+		<dependency>
 			<groupId>mdsj</groupId>
 			<artifactId>mdsj</artifactId>
 			<version>0.2</version>
