--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
+					<archive>
+                        <manifest>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+                        </manifest>
+                    </archive>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -49,23 +55,23 @@
 	    <dependency>
 		  <groupId>Bubble-Sets</groupId>
 		  <artifactId>Bubble-Sets</artifactId>
-		  <version>0.0.1-SNAPSHOT</version>
+		  <version>0.0.1</version>
 	    </dependency>
 	</dependencies>
 	<repositories>
     <repository>
-	        <id>joschi-snapshots</id>
-	        <url>https://raw.github.com/JosuaKrause/joschi-mvn-repo/master/snapshots</url>
+	        <id>joschi-mvn</id>
+	        <url>https://raw.github.com/JosuaKrause/joschi-mvn-repo/master/releases/</url>
 	    </repository>
 	</repositories>
 	<distributionManagement>
 	    <repository>
 	        <id>repo</id>
-	        <url>https://raw.github.com/JosuaKrause/joschi-mvn-repo/master/releases</url>
+	        <url>https://raw.github.com/JosuaKrause/joschi-mvn-repo/master/releases/</url>
 	    </repository>
 	    <snapshotRepository>
 	        <id>snapshot-repo</id>
-	        <url>https://raw.github.com/JosuaKrause/joschi-mvn-repo/master/snapshots</url>
+	        <url>https://raw.github.com/JosuaKrause/joschi-mvn-repo/master/snapshots/</url>
 	    </snapshotRepository>
 	</distributionManagement>
 </project>
